--- a/HelloElin/packages.config
+++ b/HelloElin/packages.config
@@ -4,4 +4,5 @@
   <package id="HalfFullWidth" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.ObjectPool" version="9.0.0" targetFramework="net472" />
   <package id="MyNihongo.KanaConverter" version="1.0.3" targetFramework="net472" />
+  <package id="ini-parser" version="2.5.2" targetFramework="net472" />
 </packages>
